data/derived/sp14/progs/unify/prog1984.ml.out
Characters 28-44:
  let fixpoint (f,b) = wwhile (f b, f b = b,b);;
                              ^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type ('d -> 'd * bool) * 'd
